--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
 
 
+:root{
+    --primary-color:#D97706;
+    --dark-grey:#9CA3AF;
 
+}
 
 body {
 
@@ -33,5 +37,34 @@ hr {
 
 
 /* link part  */
+
+
+.link{
+     text-decoration:none;
+     padding: 0.5rem;
+     border-radius: 7%;
+     margin: 00.5rem 0.3rem;
+}
+
+
+.link-primary{
+    background-color: var(--primary-color);
+    color:white;
+    
+
+}
+
+
+.link-secondary{
+    color:var(--primary-color);
+    border:1px solid var(--primary-color);
+    
+}
+
+
+
+/* link part over  */
+
+
 
 
