--- a/styles.css
+++ b/styles.css
@@ -82,3 +82,32 @@ hr {
 /* list part over  */
 
 
+
+
+
+
+.nav-bar{
+    display:flex;
+    width:auto;
+    justify-content: flex-end;
+    align-items: center;
+    border-bottom-left-radius: 0.5rem;
+    font-size:1.5rem;
+    border-bottom-left-radius: 0.5rem;
+    padding:0.5rem 1rem;
+    background-color: var(--primary-color);
+   
+}
+
+.nav-bar-item{
+    padding:0.5rem 1rem;
+    text-decoration:none;
+    color:white;
+    border-radius: 0.5rem;
+
+}
+
+.nav-bar-item:hover{
+    background:#B45309;
+
+}
