--- a/styles.css
+++ b/styles.css
@@ -236,6 +236,12 @@ hr {
     font-weight:bold;
 }
 
+@media(max-width:450px){
+    .footer-head{
+        font-size: 1.2rem;
+    }
+}
+
 /* footer part over  */
 
 /* blog part  */
