update footer in new branch

--- a/styles.css
+++ b/styles.css
@@ -202,7 +202,7 @@ hr {
 
 /* footer part  */
 
-
+/* 
 .footer{
     background-color: var(--primary-color);
     border-top-right-radius: 0.5rem;
@@ -241,7 +241,29 @@ hr {
     .footer-head{
         font-size: 1.2rem;
     }
+} */
+
+
+
+footer {
+    margin: auto;
+    font-size: 1.5rem;
+    background-color: var(--primary-color);
+    
+    text-align: center;
+    padding: 0.3rem;
 }
+
+.footer-link{
+    text-decoration: none;
+    color: black;
+}
+
+.icon{
+    padding: 0px 15px 10px 15px;
+}
+
+
 
 /* footer part over  */
 
